# permissioned-delegation-near

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
staking-pool/: Cargo.toml  README.md  build.sh  test.sh
staking-pool-factory/: Cargo.toml  README.md  build.sh  package-lock.json
staking-pool-factory/res/: staking_pool_factory.wasm
staking-pool-v2/: Cargo.toml  build.sh
staking-pool-v2/src/: lib.rs  test_utils.rs
staking-pool-v2/tests/: general.rs  utils.rs
staking-pool/neardev/: dev-account  dev-account.env
staking-pool/res/: staking_pool.wasm
staking-pool/src/: internal.rs  lib.rs  test_utils.rs
staking-pool/tests/: general.rs  quickcheck.rs  utils.rs
whitelist/res/: whitelist.wasm
