[package]
name = "staking-pool"
version = "0.4.2"
authors = ["Near Inc <hello@near.org>", "Twinstake"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sys = "0.2.0"
near-sdk = "3.1.0"
wee_alloc = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
# tokio = { version = "1.10.0", features = ["full"] }
# workspaces = "0.7.0"
# anyhow = "1.0"
# lazy_static = "1.4.0"
# arbitrary = { version = "1.0", features = ["derive"] }
# rand_xorshift = "0.3"
# rand = "0.8.3"
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", rev = "a903f8c" }

[features]
default = ["clean", "replace"]
clean = []
replace = []
